--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,27 @@ body
     font-family: 'Open Sans', sans-serif;
 }
 
+.has_modal
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #00000086;
+    z-index: 3;
+    opacity: 0;
+    pointer-events: none;
+    transition-duration: .3s;
+}
+
+.has_modal.is_visible 
+{
+    opacity: 1;
+    transition-duration: .3s;
+    pointer-events: initial;
+}
+
 form label
 {
     display: block;
@@ -112,8 +133,9 @@ nav a.btn_connexion
     background: var(--orange);
     color: #FFF !important;
     border-radius: 5px;
-    padding: 16px !important;
+    padding: 8px 16px !important;
     transition-duration: .3s;
+    font-size: 11px;
 }
 
 nav a.btn_connexion:hover
@@ -128,8 +150,9 @@ nav a.btn_inscription
     border: 2px solid var(--orange_clair);
     color: var(--orange_clair) !important;
     border-radius: 5px;
-    padding: 16px !important;
+    padding: 8px 16px !important;
     transition-duration: .3s;
+    font-size: 11px;
 }
 
 nav a.btn_inscription:hover
@@ -634,6 +657,92 @@ nav .cta .dropdown .dropdown_lien a b
     color: var(--links);
 }
 
+.modal_suggerer_modifications
+{
+    opacity: 0;
+    pointer-events: none;
+    z-index: 4;
+    width: 50%;
+    height: 800px;
+    background: #FFF;
+    border-radius: 2px;
+    box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14),0 9px 46px 8px rgba(0,0,0,0.12),0 11px 15px -7px rgba(0,0,0,0.2);
+    overflow-y: scroll;
+    transition-duration: .3s;
+    padding: 32px 64px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal_suggerer_modifications.is_visible
+{
+    opacity: 1;
+    pointer-events: initial;
+    transition-duration: .3s;
+}
+
+.modal_suggerer_modifications .modal_title
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 32px;
+}
+
+.modal_suggerer_modifications .modal_title .titre
+{
+    display: flex;
+    align-items: center;
+    color: var(--orange);
+    font-size: 22px;
+}
+
+.modal_suggerer_modifications .modal_title .close_modal
+{
+    cursor: pointer;
+}
+
+.modal_suggerer_modifications .modal_title .titre span
+{
+    margin-right: 8px;
+}
+
+.modal_suggerer_modifications .modal_content
+{
+    padding: 32px;
+}
+
+.modal_suggerer_modifications .g-recaptcha div
+{
+    margin: 0 auto;
+}
+
+.modal_suggerer_modifications .button
+{
+    text-align: center;
+    padding: 16px 0;
+}
+
+.modal_suggerer_modifications .button button
+{
+    border: none;
+    border-radius: 2px;
+    text-transform: uppercase;
+    font-size: 11px;
+    color: #FFF;
+    padding: 16px;
+    text-decoration: none;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
+    background: #2c662d;
+}
+
+.modal_suggerer_modifications .button button:hover
+{
+    cursor: pointer;
+}
+
 /*********************************************************
 
     CONNEXION
@@ -689,22 +798,25 @@ nav .cta .dropdown .dropdown_lien a b
     display: block;
     width: 170px;
     text-align: center;
-    font-size: 12px;
+    font-size: 11px;
     margin-top: 16px;
     border: none;
-    padding: 8px 16px;
-    border: 1px solid var(--orange);
-    color: var(--orange);
+    padding: 16px 8px;
+    background: #388E3C;
+    border: 1px solid #388E3C;
+    text-transform: uppercase;
+    color: #FFF;
     border-radius: 3px;
     cursor: pointer;
     text-decoration: none;
     transition-duration: .3s;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
 }
 
 .btn_nouveau_projet:hover
 {
-    background: var(--orange);
-    color: #FFF;
+    background: none;
+    color: #388E3C;
     transition-duration: .3s;
 }
 
