Background Connexion/Inscription + Responsive formulaire

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -404,7 +404,7 @@ nav .cta .dropdown .dropdown_lien a b
 .projet
 {
     background: #FFF;
-    box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;;
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
     border-radius: 5px;
     margin-bottom: 18px;
 }
@@ -770,6 +770,8 @@ nav .cta .dropdown .dropdown_lien a b
 {
     position: relative;
     min-height: 90vh;
+    background: url("../img/bg.png") no-repeat;
+    background-size: cover;
     /*background: linear-gradient(135deg, rgb(255, 171, 69) 0%, rgb(248, 172, 79) 35%, rgba(242,168,84,1) 51%, rgba(237,156,57,1) 71%, rgba(222,122,0,1) 100%);*/
 }
 
@@ -823,6 +825,22 @@ nav .cta .dropdown .dropdown_lien a b
     background: #FFF;
     color: var(--blue);
     transition-duration: .3s;
+}
+
+.formulaire_connexion .message_connexion
+{
+    margin-top: 32px;
+    font-size: 13px;
+}
+
+.formulaire_connexion .message_connexion a
+{
+    color: #000;
+}
+
+.formulaire_connexion .message_connexion a:hover
+{
+    color: var(--orange);
 }
 
 /*********************************************************
@@ -1462,6 +1480,11 @@ nav .cta .dropdown .dropdown_lien a b
         width: 100%;
     }
 
+    .formulaire_connexion
+    {
+        width: 90%;
+    }
+
     .formulaire_connexion form 
     {
         width: 90%;
@@ -1478,6 +1501,11 @@ nav .cta .dropdown .dropdown_lien a b
     .error_content
     {
         width: 100%;
+    }
+
+    .formulaire_connexion
+    {
+        width: 50%;
     }
 }
 
