--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,12 +343,38 @@ nav .cta .dropdown .dropdown_lien a b
     padding: 40px 0;
 }
 
+.recherche_projet form
+{
+    width: 25%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .recherche_projet .recherche
 {
     border: 1px solid #FFF;
-    border-radius: 5px;
+    border-radius: 5px 0 0 5px;
     padding: 10px;
-    width: 25%;
+    width: 100%;
+}
+
+.recherche_projet button
+{
+    border: none;
+    color: #FFF;
+    background: var(--orange);
+    padding: 5px;
+    vertical-align: middle;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+}
+
+.recherche_projet button span
+{
+    font-size: 28px;
+    vertical-align: middle;
 }
 
 .pagination
@@ -1476,7 +1502,7 @@ nav .cta .dropdown .dropdown_lien a b
         width: 100%;
     }
 
-    .recherche_projet .recherche
+    .recherche_projet form
     {
         width: 100%;
     }
@@ -1735,7 +1761,7 @@ nav .cta .dropdown .dropdown_lien a b
         right: 0;
     }
 
-    .recherche_projet .recherche
+    .recherche_projet form
     {
         width: 70%;
     }
